name:                opaleye-th
version:             0.1
synopsis:            TH to generate `opaleye` boilerplate
-- description:
homepage:            github.com/bergey/haskell-sql-examples
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable opaleye-th
  main-is:             Main.hs
  other-modules: TH
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , aeson
                     , bytestring
                     , opaleye
                     , product-profunctors
                     , postgresql-simple
                     , template-haskell
                     , text
                     , time
                     , uuid
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
